<?xml version="1.0" encoding="utf-8"?>
<!--
    Copyright 2026 Google LLC

    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at

        https://www.apache.org/licenses/LICENSE-2.0

    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.
-->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_action_no_padding"
        android:title="Default Padding (None)" />
    <item
        android:id="@+id/menu_action_more_padding"
        android:title="Asymmetric Padding (Right + Bottom)" />
    <item
        android:id="@+id/menu_action_opera_house"
        android:title="Move to Sydney Opera House" />
    <item
        android:id="@+id/menu_action_sfo"
        android:title="Move to San Francisco Airport (SFO)" />
    <item
        android:id="@+id/menu_action_australia"
        android:title="Fit Australia Bounds" />
</menu>
